--- a/client/public/global.css
+++ b/client/public/global.css
@@ -4,7 +4,7 @@ html, body {
 	width: 100%;
 	height: 100%;
 	background-image: url("https://d30xqvs6b65d10.cloudfront.net/wp-content/uploads/2020/12/Cyberpunk-2077-endings-guide-all-endings-and-epilogues-2-Panam-3b.jpg");
-	background-repeat: no-repeat;
+	background-repeat: repeat-y;
 	background-size: cover;
 }
 
