background no longer scrolls

--- a/client/public/global.css
+++ b/client/public/global.css
@@ -4,7 +4,8 @@ html, body {
 	width: 100%;
 	height: 100%;
 	background-image: url("https://wallpaperaccess.com/full/676037.jpg");
-	background-repeat: repeat-y;
+	background-repeat: no-repeat;
+	background-attachment:fixed;
 	background-size: cover;
 }
 
