--- a/client/public/global.css
+++ b/client/public/global.css
@@ -9,6 +9,18 @@ html, body {
 	background-size: cover;
 }
 
+@media only screen and (max-width: 600px) {
+	html, body {
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	background-image: url("https://wallpaperaccess.com/full/676037.jpg");
+	background-repeat: no-repeat;
+	background-attachment:fixed;
+	background-size: cover;
+	}
+}
+
 body {
 	color:#fff;
 	margin: 0;
