--- a/client/public/global.css
+++ b/client/public/global.css
@@ -11,7 +11,7 @@ html, body {
 
 @media only screen and (max-width: 600px) {
 	html, body {
-	position: fixed;
+	position: relative;
 	width: 100%;
 	height: 100vh;
 	background-image: url("https://wallpaperaccess.com/full/676037.jpg");
